Se le agregó un párrafo después del título a index

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Hola Corazones míos, esta es la prueba del curso virtual; PuntosExtras</h1> <br>
+    <p>Hola nuevamente, esta es la prueba en GitKraken</p> <br>
+    
 </body>
 </html>
