--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Hola Corazones míos, esta es la prueba del curso virtual; PuntosExtras</h1> <br>
-    <p>Hola nuevamente, esta es la prueba en GitKraken</p> <br>
-    
+    <p>Hola nuevamente, esta es la prueba en GitKraken.
+        Ponemos en práctica el segundo branch Develop
+    </p> <br>
+
 </body>
 </html>
