Se agregó un formulario junto a un botón, index

--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
         Ponemos en práctica el segundo branch Develop
     </p> <br>
 
+    <form action="#" method="get">
+        <input type="button" value="Enviar">
+    </form>
+    
+
 </body>
 </html>
