Se le agregó un input tipo texto antes del botón, hacia Index

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </p> <br>
 
     <form action="#" method="get">
+        <input type="text" name="First name" id="Primer nombre">
         <input type="button" value="Enviar">
     </form>
     
