Se agregó un tercer input tipo fecha en index

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <form action="#" method="get">
         <input type="text" name="First name" id="Primer nombre">
         <input type="text" name="Lastname" id="Apellido">
+        <input type="date" name="Date" id="Fecha">
         <input type="button" value="Enviar">
     </form>
     
