Se modificó el primer impur tipo texto en index

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </p> <br>
 
     <form action="#" method="get">
-        <input type="text" name="First name" id="Primer nombre">
+        <input type="texto" name="First name" id="Primer nombre">
         <input type="text" name="Lastname" id="Apellido">
         <input type="date" name="Date" id="Fecha">
         <input type="button" value="Enviar">
